Allow entities to claim repositories ownership
Closes #586
